deploy/kyverno/05-restrict-serviceaccounts.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-serviceaccounts
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: block-default-serviceaccount
      match:
        any:
          - resources:
              kinds: ["Pod"]
      validate:
        message: "Default service account is not allowed."
        pattern:
          spec:
            serviceAccountName: "!default"
